cmake_minimum_required(VERSION 3.22)
project(LeetCode_C)

set(CMAKE_CXX_STANDARD 14)

add_executable(0002 "LeetCode 0002 两数相加.cpp")
add_executable(0003 "LeetCode 0003 无重复字符的最长子串.cpp")
add_executable(0004 "LeetCode 0004 寻找两个正序数组的中位数.cpp")
add_executable(0005 "LeetCode 0005 最长回文子串.cpp")
add_executable(0006 "LeetCode 0006 Z 字形变换.cpp")
add_executable(0008 "LeetCode 0008 字符串转换整数 (atoi).cpp")
add_executable(0010 "LeetCode 0010 正则表达式匹配.cpp")
