cmake_minimum_required(VERSION 3.22)
project(LeetCode_C)

set(CMAKE_CXX_STANDARD 14)

add_executable(0002 "LeetCode 0002 两数相加.cpp")
add_executable(0003 "LeetCode 0003 无重复字符的最长子串.cpp")
add_executable(0004 "LeetCode 0004 寻找两个正序数组的中位数.cpp")
add_executable(0005 "LeetCode 0005 最长回文子串.cpp")
add_executable(0006 "LeetCode 0006 Z 字形变换.cpp")
add_executable(0008 "LeetCode 0008 字符串转换整数 (atoi).cpp")
add_executable(0010 "LeetCode 0010 正则表达式匹配.cpp")
add_executable(0011 "LeetCode 0011 盛最多水的容器.cpp")
add_executable(0015 "LeetCode 0015 三数之和.cpp")
add_executable(0021 "LeetCode 0021 合并两个有序链表.cpp")
add_executable(0022 "LeetCode 0022 括号生成 .cpp")
add_executable(0023 "LeetCode 0023 合并K个升序链表.cpp")
add_executable(0031 "LeetCode 0031 下一个排列.cpp")
add_executable(0033 "LeetCode 0033 搜索旋转排序数组.cpp")
add_executable(0045 "LeetCode 0045 跳跃游戏 II.cpp")
add_executable(0046 "LeetCode 0046 全排列.cpp")